--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm run lint
+        run: npm run lint --no-cache
 
       - name: Print Environment Variable
         run: echo $MY_ENV_VAR
