--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.279.0",
     "next": "^14.2.18",
     "next-themes": "^0.2.1",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
     "@types/eslint": "^8.44.2",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
